fix: spacing

--- a/css/style.css
+++ b/css/style.css
@@ -185,7 +185,8 @@ h4 {
 /* Menu */
 .menu-container {
   background-color: #fffaef;
-  padding-bottom: 120px;
+  padding-bottom: 100px;
+  padding-top: 50px;
 }
 
 .card {
